tests/tests/ui/enum_label_too_long_default.rs
#[derive(toasty::Embed)]
enum Status {
    Active,
    ThisVariantNameIsExtremelyLongAndWillExceedSixtyThreeBytesWhenConvertedToSnakeCase,
}

fn main() {}
